Add DIB element

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ envlist = builder
 [testenv]
 basepython = python3
 setenv = VIRTUAL_ENV={envdir}
-         ELEMENTS_PATH={envdir}/share/ironic-python-agent-builder/dib
+         ELEMENTS_PATH={toxinidir}/dib:{envdir}/share/ironic-python-agent-builder/dib
+         # CentOS 8
          DIB_RELEASE=8
          HOME={toxworkdir}
          LANGUAGE=en_US
@@ -17,5 +18,7 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
 [testenv:builder]
 commands =
-  disk-image-create -o ironic-python-agent \
-    ironic-python-agent-ramdisk centos-minimal
+  {posargs:disk-image-create -o ironic-python-agent \
+    chameleon-ipa-hardware-manager \
+    ironic-python-agent-ramdisk \
+    centos-minimal}
