Add dynamic-login element
This element allows one to send a kernel parameter (via PXE or iPXE)
"rootpwd" or "sshkey", which will install a root password or SSH key
during boot. In our case, we can use rootpwd to set up a local root user
so we can log in during a clean step.

--- a/tox.ini
+++ b/tox.ini
@@ -21,4 +21,5 @@ commands =
   {posargs:disk-image-create -o ironic-python-agent \
     chameleon-ipa-hardware-manager \
     ironic-python-agent-ramdisk \
+    dynamic-login \
     centos-minimal}
