Add docs + make it easier to get dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -5,21 +5,25 @@ envlist = builder
 
 [testenv]
 basepython = python3
-setenv = VIRTUAL_ENV={envdir}
-         ELEMENTS_PATH={toxinidir}/dib:{envdir}/share/ironic-python-agent-builder/dib
-         # CentOS 8
-         DIB_RELEASE=8
-         HOME={toxworkdir}
-         LANGUAGE=en_US
+setenv = LANGUAGE=en_US
          LC_ALL=en_US.UTF-8
 deps =
   -r{toxinidir}/requirements.txt
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
 [testenv:builder]
-commands =
-  {posargs:disk-image-create -o ironic-python-agent \
+setenv = HOME={toxworkdir}
+         VIRTUAL_ENV={envdir}
+         ELEMENTS_PATH={toxinidir}/dib:{envdir}/share/ironic-python-agent-builder/dib
+         # CentOS 8
+         DIB_RELEASE=8
+commands = disk-image-create {posargs:-o ironic-python-agent} \
     chameleon-ipa-hardware-manager \
     ironic-python-agent-ramdisk \
     dynamic-login \
-    centos-minimal}
+    centos-minimal
+
+[testenv:bindep]
+deps =
+  bindep
+commands = bindep --list_all newline --file {toxinidir}/bindep.txt
