Install HWM at build and at boot
By installing the HWM at boot time, we have a fall back in case it
cannot upgrade the library for whatever reason.

--- a/dib/chameleon-ipa-hardware-manager/init-scripts/systemd/chameleon-ipa-hardware-manager-sync.service
+++ b/dib/chameleon-ipa-hardware-manager/init-scripts/systemd/chameleon-ipa-hardware-manager-sync.service
@@ -5,9 +5,8 @@ Before=ironic-python-agent.service
 
 [Service]
 Type=oneshot
-ExecStart=/opt/chameleon-ipa-hardware-manager/manage.sh install
+ExecStart=/usr/local/bin/chameleon-ipa-hardware-manager-sync
 RemainAfterExit=true
-ExecStop=/opt/chameleon-ipa-hardware-manager/manage.sh uninstall
 StandardOutput=journal
 
 [Install]
